plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.4'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'checkstyle'
}

allprojects {
	group = 'com.cakk'
	version = '1.0.0-SNAPSHOT'
	sourceCompatibility = '21'

	repositories {
		mavenCentral()
	}
}

subprojects {
	apply plugin: 'java'
	apply plugin: 'org.springframework.boot'
	apply plugin: 'io.spring.dependency-management'
	apply plugin: 'checkstyle'

	configurations {
		compileOnly {
			extendsFrom annotationProcessor
		}
	}

	dependencies {
		// lombok
		compileOnly 'org.projectlombok:lombok'
		annotationProcessor 'org.projectlombok:lombok'

		testImplementation 'junit:junit:4.13.1'
	}

	checkstyle {
		maxWarnings = 0
		configFile = file("$rootDir/config/checkstyle/checkstyle-rules.xml")
		configProperties = ["suppressionFile": "$rootDir/config/checkstyle/checkstyle-suppressions.xml"]
		sourceSets = [sourceSets.main]

		checkstyleMain {
			source = fileTree("src/main/java")
		}

		checkstyleTest {
			source = fileTree("src/test/java")
		}
	}

	tasks.named('test') {
		useJUnitPlatform()
	}
}

bootJar {
	enabled = false
}
jar {
	enabled = true
}
